--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Hyeoncheol Choi</a>.
+      >. Coded by
+      <a href="https://www.frontendmentor.io/profile/hyeonpearl"
+        >Hyeoncheol Choi</a
+      >.
     </div>
   </body>
 </html>
